kubernetes/apps/monitoring/kube-prometheus-stack/manifests/prometheus/prometheus-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-web
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.poolnode.net`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          kind: Service
          namespace: monitoring
          scheme: http
          port: 9090
  tls:
    secretName: poolnode-wildcard-tls
